# test_CISM

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker.env.example  main.py  pyproject.toml  run_consumer.py
alembic/: env.py
alembic/versions/: fcfe6bb580fd_.py
app/api/: dependencies.py
app/api/endpoints/: tasks.py
app/api/schemas/: task.py
app/core/: config.py  logger.py
app/db/: database.py  models.py
app/entity/: filter.py  task.py
app/repositories/: base_repository.py  tasks_repository.py
app/services/: rabbit.py  rabbit_publisher.py  task.py  task_service.py
app/tests/: conftest.py  test_tasks.py
app/utils/: unitofwork.py
app/workers/: consumer.py
tests/: conftest.py
